--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -1,13 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WindowsFormsApp1.Properties.Settings.TestFormConnectionString"
-            connectionString="Data Source=DESK\SQLEXPRESS;Initial Catalog=TestForm;Integrated Security=True;Pooling=False"
-            providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApp1.Properties.Settings.TestFormConnectionString" connectionString="Data Source=DESK\SQLEXPRESS;Initial Catalog=TestForm;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+    <startup>  
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
 </configuration>
