--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -6,5 +6,5 @@
         <add name="WindowsFormsApp1.Properties.Settings.TestFormConnectionString" connectionString="Data Source=DESK\SQLEXPRESS;Initial Catalog=TestForm;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup>  
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+    <supportedRuntime version="v2.0.50727"/></startup>
 </configuration>
